--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -3,3 +3,6 @@ map <C-d> shell dragon -a -x %p
 
 # Unmount the selected folder/device with 'um'
 map um shell udiskie-umount %f
+
+# OCR selected PDF (Greek+English)
+map ocr shell run-ocr.sh %f
