feat: add ranger devicons plugin, typora for md, and image viewing

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -6,3 +6,9 @@ map um shell udiskie-umount %f
 
 # OCR selected PDF (Greek+English)
 map ocr shell run-ocr.sh %f
+
+# Enable the image preview mechanism
+set preview_images true
+
+# Set the method to w3m (works natively with st)
+set preview_images_method w3m
