--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -140,6 +140,8 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
+# Markdown: Open in Typora (GUI) or fallback to Editor
+ext md|markdown, has typora, X, flag f = typora "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 # 1. Default: Read with Zathura (Press Enter)
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
