--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -12,3 +12,6 @@ set preview_images true
 
 # Set the method to w3m (works natively with st)
 set preview_images_method w3m
+
+# Set the default line mode to include icons
+default_linemode devicons
