feature: mount-tablet.sh webapp-menu.sh improvements of config files

--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -145,8 +145,8 @@ ext md|markdown, has typora, X, flag f = typora "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 # 1. Default: Read with Zathura (Press Enter)
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
-# 2. Alternative: Edit in Firefox (Select via menu)
-ext pdf, has firefox,  X, flag f = firefox -- "$@"
+# 2. Alternative: Edit in sioyek (Select via menu)
+ext pdf, has sioyek,  X, flag f = sioyek --new-window "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
 ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
 ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
