--- a/config/redshift/redshift.conf
+++ b/config/redshift/redshift.conf
@@ -4,14 +4,14 @@ location-provider=manual
 adjustment-method=randr
 
 temp-day=5500
-temp-night=3500
+temp-night=3000
+brightness=1.0:0.8
 transition=1
-location-provider=manual
 
 [manual]
 lat=36.7
 lon=23.0
 
 [gamma]
-gamma=0.9
+gamma=1.0:0.8
 
