--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -150,7 +150,7 @@ ext pdf, has llpp,     X, flag f = llpp "$@"
 # 1. Default: Read with Zathura (Press Enter)
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 # 2. Alternative: Edit in sioyek (Select via menu)
-ext pdf, has okular,  X, flag f = okular --new-window "$@"
+ext pdf, has okular,  X, flag f = okular -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
 ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
 ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
