chore: fix redshift.conf to align with apparmor and setup tmux

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,11 +1,17 @@
 # --- Behavior ---
+
+# Set prefix to Ctrl-a (easier than Ctrl-b)
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
 # Enable Mouse (Scroll, Resize, Select)
 set -g mouse on
 
 # Increase scrollback history (default is too small)
 set -g history-limit 5000
 
-# Fix Colors (Important for Neovim/Rose-Pine)
+# Terminal colors (ensures Neovim looks right)
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
@@ -14,7 +20,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # --- Keybindings ---
-# Use Vi keys in copy mode (since you use Neovim/Ranger)
+# Use Vi mode for scrolling/copying
 setw -g mode-keys vi
 
 # --- Visuals (Minimal Dark Theme) ---
@@ -24,3 +30,12 @@ set -g status-right "#[fg=#eb6f92] %H:%M "    # Time (Love)
 set -g window-status-current-style "fg=#f6c177,bold" # Active Window (Gold)
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
+
+# Fix escape time for Neovim (vital for LazyVim responsiveness)
+set -sg escape-time 0
+
+# Vim-like pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
